// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BuyButton /> should match snapshot loading 1`] = `
<DocumentFragment>
  <svg
    class="content-loader-mock"
  />
</DocumentFragment>
`;

exports[`<BuyButton /> should match snapshot normal 1`] = `
<DocumentFragment>
  <div
    class="buyButtonContainer--available"
  >
    <button
      data-isloading="false"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`<BuyButton /> should match snapshot unavailable 1`] = `
<DocumentFragment>
  <div
    class="buyButtonContainer--unavailable"
  >
    <button
      data-isloading="false"
      disabled=""
    >
      <div
        class="buyButtonText"
      >
        <span>
          Unavailable
        </span>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
